; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_fs3270.c_fs3270_free_view.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_fs3270.c_fs3270_free_view.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw3270_view = type { i32 }
%struct.fs3270 = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.raw3270_view*)* @fs3270_free_view to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fs3270_free_view(%struct.raw3270_view* %0) #0 {
  %2 = alloca %struct.raw3270_view*, align 8
  %3 = alloca %struct.fs3270*, align 8
  store %struct.raw3270_view* %0, %struct.raw3270_view** %2, align 8
  %4 = load %struct.raw3270_view*, %struct.raw3270_view** %2, align 8
  %5 = bitcast %struct.raw3270_view* %4 to %struct.fs3270*
  store %struct.fs3270* %5, %struct.fs3270** %3, align 8
  %6 = load %struct.fs3270*, %struct.fs3270** %3, align 8
  %7 = getelementptr inbounds %struct.fs3270, %struct.fs3270* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.fs3270*, %struct.fs3270** %3, align 8
  %12 = getelementptr inbounds %struct.fs3270, %struct.fs3270* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @idal_buffer_free(i64 %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.raw3270_view*, %struct.raw3270_view** %2, align 8
  %17 = bitcast %struct.raw3270_view* %16 to %struct.fs3270*
  %18 = getelementptr inbounds %struct.fs3270, %struct.fs3270* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @raw3270_request_free(i32 %19)
  %21 = load %struct.raw3270_view*, %struct.raw3270_view** %2, align 8
  %22 = call i32 @kfree(%struct.raw3270_view* %21)
  ret void
}

declare dso_local i32 @idal_buffer_free(i64) #1

declare dso_local i32 @raw3270_request_free(i32) #1

declare dso_local i32 @kfree(%struct.raw3270_view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
